# morph

./: .editorconfig  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  Jenkinsfile  Morph.lean  PATH_FORWARD.md  README.md  ROADMAP.md  ROADMAP_CONSOLIDATED.md  ROADMAP_DETAILED.md  SPECIFICATION_INDEX.md  SPEC_CONTRADICTIONS.md  SPEC_FIX_PROPOSAL.md  SPEC_GAPS_AND_BASIS.md  SPEC_INCONSISTENCIES.md  SPEC_STATUS.md  TestVars.lean  err.md  flake.nix  lake-manifest.json  lakefile.lean  lakefile.toml
scripts/: CHANGELOG.md  LICENSE  README.md  SPEC_LINK_CHECKER_README.md  SPEC_LINTER_README.md  SPEC_VERSION_VALIDATOR_README.md  cross-ref-validate.sh  fix_header_self_references.py  fix_remaining_broken_links.py  fix_spec_links.py  format_markdown.py  gen-spec-status.sh  pyproject.toml  regression-snapshot.sh  spec_link_checker.py  spec_linter.py  spec_version_validator.py  standardize_spec_headers.py  standardize_spec_headers_v2.py  standardize_spec_headers_v3.py  standardize_spec_headers_v4.py  standardize_spec_headers_v5.py  standardize_spec_headers_v6.py  standardize_spec_headers_v7.py
scripts/spec_tools/: __init__.py
scripts/spec_tools/cli/: __init__.py  main.py
scripts/spec_tools/config/: __init__.py  config_manager.py
scripts/spec_tools/exceptions/: __init__.py  exceptions.py
scripts/spec_tools/formatting/: __init__.py  formatter.py
scripts/spec_tools/link_checker/: __init__.py  checker.py
scripts/spec_tools/linting/: __init__.py  linter.py
scripts/spec_tools/models/: __init__.py  models.py
scripts/spec_tools/utils/: __init__.py  file_utils.py  logging_utils.py
scripts/spec_tools/validation/: __init__.py  validator.py
scripts/spec_tools/verification/: README.md  __init__.py  classification.py  compilation.py  coverage.py  issue_detection.py  models.py  severity.py
scripts/tests/: conftest.py  pytest.ini  test_exceptions.py
scripts/tests/integration/: test_workflows.py
scripts/tests/test_cli/: __init__.py  test_check_all_command.py  test_check_links_command.py  test_format_command.py  test_init_config_command.py  test_lint_command.py  test_main.py  test_validate_command.py
scripts/tests/test_formatting/: __init__.py  test_emphasis_normalization_rule.py  test_formatter.py  test_heading_spacing_rule.py  test_line_length_rule.py  test_list_normalization_rule.py  test_trailing_whitespace_rule.py
scripts/tests/test_link_checker/: __init__.py  test_checker.py  test_file_exists.py  test_file_ref.py  test_link_cache.py
scripts/tests/test_linting/: __init__.py  test_cross_refs.py  test_header_validation_rule.py  test_linter.py  test_math.py  test_mermaid.py  test_requirements.py
scripts/tests/test_shared/: test_config_manager.py
scripts/tests/test_utils/: test_file_utils.py  test_logging_utils.py
scripts/tests/test_validation/: __init__.py  test_maintainability.py  test_performance.py  test_risk_assessment.py  test_security.py  test_validator.py  test_verification.py
scripts/tests/test_verification/: test_classification.py  test_compilation.py  test_coverage.py  test_issue_detection.py  test_models.py  (+1 more)
(+623 files in other folders)
