[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spec-tools"
version = "1.0.0"
description = "Specification tools for Morph project - formatting, linting, validation, and link checking"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Apache-2.0"}
authors = [
    {name = "Morph Project", email = "dev@morph.dev"}
]
keywords = ["specification", "markdown", "linting", "validation", "link-checking"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Documentation",
    "Topic :: Text Processing :: Markup",
]

dependencies = [
    "pyyaml>=6.0",
    "click>=8.0",
    "rich>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=22.0",
    "mypy>=0.991",
    "ruff>=0.0.200",
    "types-PyYAML>=6.0",
]

[project.scripts]
spec-tools = "spec_tools.cli:main"

[project.urls]
Homepage = "https://github.com/morph/spec-tools"
Documentation = "https://morph.dev/spec-tools"
Repository = "https://github.com/morph/spec-tools"
Issues = "https://github.com/morph/spec-tools/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["spec_tools*"]

[tool.black]
line-length = 120
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = "yaml.*"
ignore_missing_imports = true

[tool.ruff]
line-length = 120
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov=spec_tools",
    "--cov-report=html",
    "--cov-report=term-missing",
    "--cov-fail-under=48",
    "-v",
]

[tool.coverage.run]
source = ["spec_tools"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/verification/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
